# area_reader

./: .gitignore  PROJECT.md  README.md  area_reader.py  circlemud.md  circlemud.py  coffeemud.md  conftest.py  constants.py  convert_all.py  evennia_builder  normalized.py  normalizer.py  pyproject.toml  requirements.txt  test_area_reader.py  validate_samples.py
.github/workflows/: ci.yml
area_reader/: __init__.py
