[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "area-reader"
version = "0.1.0"
description = "A Python library to parse MUD area files"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Christopher Toth" }]
dependencies = [
    "attrs",
    "cattrs",
]

[project.urls]
Homepage = "https://github.com/ctoth/area_reader"
Repository = "https://github.com/ctoth/area_reader"

[project.scripts]
area-reader = "area_reader:main"

[project.optional-dependencies]
test = [
    "pytest",
    "hypothesis",
]

[tool.hatch.build.targets.wheel]
packages = ["area_reader"]

[tool.hatch.build.targets.sdist]
include = ["area_reader", "README.md", "test", "conftest.py"]
